--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2003-05-19  Gabriel Dos Reis  <gdr@integrable-solutions.net>
+
+	* hashtable.h (struct ht_identifier): Add new field "hash_value".
+	* hashtable.c (ht_lookup): Use it.
+	(ht_expand): Likewise.  Avoid doing the same computation twice.
+	* tree.h (IDENTIFIER_HASH_VALUE): New macro.
+
 2003-05-19  Nick Clifton  <nickc@redhat.com>
 
 	* config/arm/arm.c (use_return_insn): Do not use a single return
@@ -42,18 +49,6 @@
 
 	* version.c: Reset to prerelease format.
 	* doc/include/gcc-common.texi: Update version number.
-
-2003-05-13  Release Manager
-
-	* GCC 3.3 Released.
-
-2003-05-13  Release Manager
-
-	* GCC 3.3 Released.
-
-2003-05-13  Release Manager
-
-	* GCC 3.3 Released.
 
 2003-05-13  Release Manager
 
