--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-19  John David Anglin  <dave.anglin@nrc-gnrc.gc.ca>
+
+	* pa/milli64.S ($$mulI): Fix typo.
+
 2003-05-19  Gabriel Dos Reis  <gdr@integrable-solutions.net>
 
 	* hashtable.h (struct ht_identifier): Add new field "hash_value".
