--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-20  Gabriel Dos Reis <gdr@integrable-solutions.net>
+
+	PR libstdc++/10689
+	* include/std/std_complex.h (pow): Tidy.
+
 2003-05-17  Nathan Myers  <ncm@cantrip.org>
 
 	* include/bits/streambuf.tcc (__copy_streambufs): Rewrote.
