--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,10 +1,6 @@
-2003-05-13  Release Manager
+2003-05-18  Nathanael Nerode  <neroden@gcc.gnu.org>
 
-	* GCC 3.3 Released.
-
-2003-05-13  Release Manager
-
-	* GCC 3.3 Released.
+	* gcc_release: GNU CC -> GCC.
 
 2003-05-13  Release Manager
 
