--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,9 @@
+2003-05-21  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* include/bits/stl_alloc.h (__default_alloc_template::_S_chunk_alloc):
+	Cast via void* to avoid -Wcast-align warnings.
+	(__default_alloc_template::_S_refill): Likewise.
+
 2003-05-20  Gabriel Dos Reis <gdr@integrable-solutions.net>
 
 	PR libstdc++/10689
