--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-23  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* doc/install.texi: Remove sparc64-*-*. Add sparc64-*-solaris2*.
+	Document sparcv9-*-solaris2* as a synonym for sparc64-*-solaris2*.
+
 2003-05-22  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	PR bootstrap/10805
