i386.md (sse_loadss, [...]): Rewrite
	* i386.md (sse_loadss, sse_loadss_1, sse2_loadsd, sse2_loadsd_1):
	Rewrite

From-SVN: r67127

--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -18443,11 +18443,21 @@
   [(set_attr "type" "ssecvt")
    (set_attr "mode" "V4SF")])
 
-(define_insn "sse_loadss"
+(define_expand "sse_loadss"
+  [(match_operand:V4SF 0 "register_operand" "")
+   (match_operand:SF 1 "memory_operand" "")]
+  "TARGET_SSE"
+{
+  emit_insn (gen_sse_loadss_1 (operands[0], operands[1],
+			       CONST0_RTX (V4SFmode)));
+  DONE;
+})
+
+(define_insn "sse_loadss_1"
   [(set (match_operand:V4SF 0 "register_operand" "=x")
 	(vec_merge:V4SF
-	 (match_operand:V4SF 1 "memory_operand" "m")
-	 (vec_duplicate:V4SF (float:SF (const_int 0)))
+	 (vec_duplicate:V4SF (match_operand:SF 1 "memory_operand" "m"))
+	 (match_operand:V4SF 2 "const0_operand" "X")
 	 (const_int 1)))]
   "TARGET_SSE"
   "movss\t{%1, %0|%0, %1}"
@@ -21941,11 +21951,21 @@
   [(set_attr "type" "ssecvt")
    (set_attr "mode" "V2DF")])
 
-(define_insn "sse2_loadsd"
+(define_expand "sse2_loadsd"
+  [(match_operand:V2DF 0 "register_operand" "")
+   (match_operand:DF 1 "memory_operand" "")]
+  "TARGET_SSE2"
+{
+  emit_insn (gen_sse2_loadsd_1 (operands[0], operands[1],
+			        CONST0_RTX (V2DFmode)));
+  DONE;
+})
+
+(define_insn "sse2_loadsd_1"
   [(set (match_operand:V2DF 0 "register_operand" "=x")
 	(vec_merge:V2DF
-	 (match_operand:DF 1 "memory_operand" "m")
-	 (vec_duplicate:DF (float:DF (const_int 0)))
+	 (vec_duplicate:V2DF (match_operand:DF 1 "memory_operand" "m"))
+	 (match_operand:V2DF 2 "const0_operand" "X")
 	 (const_int 1)))]
   "TARGET_SSE2"
   "movsd\t{%1, %0|%0, %1}"
