--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Fri May 23 20:55:39 CEST 2003  Jan Hubicka  <jh@suse.cz>
+
+	* i386.md (sse_loadss, sse_loadss_1, sse2_loadsd, sse2_loadsd_1):
+	Rewrite
+
 2003-05-23  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* doc/install.texi: Remove sparc64-*-*. Add sparc64-*-solaris2*.
