--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Fri May 23 21:19:31 CEST 2003  Jan Hubicka  <jh@suse.cz>
+			       Andreas Jaeger  <aj@suse.de>
+
+	* i386.h (TARGET_CPU_CPP_BUILTINS): Define __amd64 and __amd64__;
+	do not use assertion.
+
 Fri May 23 20:55:39 CEST 2003  Jan Hubicka  <jh@suse.cz>
 
 	* i386.md (sse_loadss, sse_loadss_1, sse2_loadsd, sse2_loadsd_1):
