* doc/contrib.texi (Contributors): Update Kean Johnston.
From-SVN: r67168

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-05-25  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>
+
+	* doc/contrib.texi (Contributors): Update Kean Johnston.
+
 Fri May 23 21:19:31 CEST 2003  Jan Hubicka  <jh@suse.cz>
 			       Andreas Jaeger  <aj@suse.de>
 
