diagnostic.h (output_verbatim): Remove printf attribute.
	* diagnostic.h (output_verbatim): Remove printf attribute.
	(verbatim): Likewise.
	* diagnostic.c (output_pointer): New function.
	(output_format): Use it.  Handle %p format specifier.
cp/
	* decl.c (ENABLE_CHECKING_SCOPES): New macro.
	(binding_depth): Unconditionally define.
	(is_class_level): Likewise.
 	(indent): Likewise.  Take an indenting parameter.
 	(push_binding_level): Remove conditional definittion.
 	(pop_binding_level): Likewise.
 	(suspend_binding_level): Likewise.
 	(resume_binding_level): Likewise.
 	(pushlevel): Likewise.
 	(pushlevel_class): Likewise.
 	(poplevel_class): Likewise.
 	(pop_everything): Likewise.

From-SVN: r67227

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2003-05-29  Gabriel Dos Reis <gdr@integrable-solutions.net>
+
+	* diagnostic.h (output_verbatim): Remove printf attribute.
+	(verbatim): Likewise.
+	* diagnostic.c (output_pointer): New function.
+	(output_format): Use it.  Handle %p format specifier.
+
 2003-05-27  Denis Chertykov  <denisc@overta.ru>
 
 	* cselib.c (cselib_invalidate_regno): Abort if hardreg have a
