mips.h (SUBTARGET_ASM_DEBUGGING_SPEC): Move -mdebug/-no-mdebug switches ...
	* config/mips/mips.h (SUBTARGET_ASM_DEBUGGING_SPEC): Move
	-mdebug/-no-mdebug switches ...
	(MDEBUG_ASM_SPEC): ... here.
	Use only with gas.
	(EXTRA_SPECS): Initialize mdebug_asm_spec.
	(CONSTANT_ADDRESS_P): Allow native IRIX 6 O32 assembler.

From-SVN: r67241

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2003-05-30  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* config/mips/mips.h (SUBTARGET_ASM_DEBUGGING_SPEC): Move
+	-mdebug/-no-mdebug switches ...
+	(MDEBUG_ASM_SPEC): ... here.
+	Use only with gas.
+	(EXTRA_SPECS): Initialize mdebug_asm_spec.
+	(CONSTANT_ADDRESS_P): Allow native IRIX 6 O32 assembler.
+
 2003-05-29  Gabriel Dos Reis <gdr@integrable-solutions.net>
 
 	* diagnostic.h (output_verbatim): Remove printf attribute.
