--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-31  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* doc/md.texi (Automaton pipeline description): Use
+	"type" instead of "cpu" as the attribute in the examples.
+
 2003-05-30  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
 
 	* config/mips/mips.h (SUBTARGET_ASM_DEBUGGING_SPEC): Move
