re PR target/10871 (rs6000.c)
2003-06-01  Seth Arnold  <sarnold@wirex.com>
            Aldy Hernandez  <aldyh@redhat.com>

            PR10871
            * config/rs6000/rs6000.c (rs6000_stack_info): Do not add
            vrsave_size twice.

Co-Authored-By: Aldy Hernandez <aldyh@redhat.com>

From-SVN: r67288

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2003-06-01  Seth Arnold  <sarnold@wirex.com>
+            Aldy Hernandez  <aldyh@redhat.com>
+
+	    PR10871	    
+	    * config/rs6000/rs6000.c (rs6000_stack_info): Do not add
+	    vrsave_size twice.
+
 2003-05-31  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* doc/install.texi (mips-sgi-irix5): Add missing
