--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-01  Josef Zlomek  <zlomekj@suse.cz>
+
+	* rtl.def (CONST_DOUBLE): Update comment.
+
 2003-06-01  Seth Arnold  <sarnold@wirex.com>
             Aldy Hernandez  <aldyh@redhat.com>
 
