--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-01  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	PR target/11044
+	* config/i386/i386.md (length attribute): Set length to 4
+	for instructions of type "fcmp".
+
 2003-06-01  Josef Zlomek  <zlomekj@suse.cz>
 
 	* rtl.def (CONST_DOUBLE): Update comment.
