--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-02  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>
+
+        * gcc/config.gcc Add support multilib parts for m32rx processor.
+
 2003-06-01  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	PR target/11044
