--- a/gcc/po/ChangeLog
+++ b/gcc/po/ChangeLog
@@ -1,3 +1,10 @@
+2003-06-03  Philipp Thomas  <pthomas@suse.de>
+
+	* da.po: Update to latest version.
+	* es.po: Likewise.
+	* tr.po: Likewise.
+	* de.po: Likewise.
+
 2003-05-13  Release Manager
 
 	* GCC 3.3 Released.
