--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-03  Douglas B Rupp  <rupp@gnat.com>
+
+	* Makefile.in (TEXI_GCC_FILES): Remove vms.texi entry.
+	* doc/gcc.texi: Remove vms.texi section.
+	* doc/vms.texi: Remove obsolete file.
+
 2003-06-03  Richard Henderson  <rth@redhat.com>
 
 	PR target/10673
