--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,10 @@
+2003-06-06  Nathan Myers  <ncm-nospam@cantrip.org>
+
+	* include/bits/stl_iterator.h (reverse_iterator::reverse_iterator()):
+	Apply DR235: default constructor default-initializes data member.
+	Instantiated on a pointer type, the member has to end up equal
+	to zero.
+
 2003-06-02  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	PR libstdc++/9815
