--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-06  James E Wilson  <wilson@tuliptree.org>
+
+	PR inline-asm/10890
+	* reload1.c (merge_assigned_reloads): Abort only if two reloads have
+	different in fields.
+
 2003-06-06  Richard Earnshaw  <rearnsha@arm.com>
 
 	PR target/11052
