--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,14 @@
+2003-06-07  Paolo Carlini  <pcarlini@unitus.it>
+
+	PR libstdc++/11095
+	* include/bits/istream.tcc (operator>>(basic_istream&, _CharT*)):
+	Deal with width() smaller than zero.
+	* include/bits/ostream.tcc (operator<<(basic_ostream&, _CharT),
+	operator<<(basic_ostream&, char), operator<<(basic_ostream&,
+	const _CharT*), operator<<(basic_ostream<_CharT, _Traits>&,
+	const char*), operator<<(basic_ostream<char, _Traits>&,
+	const char*), operator<<(basic_ostream, const basic_string&)): Likewise.
+
 2003-06-06  Nathan Myers  <ncm-nospam@cantrip.org>
 
 	* include/bits/stl_iterator.h (reverse_iterator::reverse_iterator()):
