re PR c++/11039 (Bad interaction between implicit typename deprecation and friendship)
	PR c++/11039
	* decl2.c (handle_class_head): Remove implicitness in typename
	appeared as elaborated type specifier in declaration.

	* g++.dg/warn/implicit-typename2.C: New test.
	* g++.dg/warn/implicit-typename3.C: New test.

From-SVN: r67619

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-08  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	PR c++/11039
+	* decl2.c (handle_class_head): Remove implicitness in typename
+	appeared as elaborated type specifier in declaration.
+
 2003-06-03  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
 
 	PR c++/10940
