--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-08  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	PR c++/11039
+	* g++.dg/warn/implicit-typename2.C: New test.
+	* g++.dg/warn/implicit-typename3.C: New test.
+
 2003-06-04  Richard Henderson  <rth@redhat.com>
 
 	* gcc.dg/cleanup-1.c: New.
