Add PR number to last entry
From-SVN: r67650

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,5 +1,6 @@
 2003-06-09  Albert Chin-A-Young  <china@thewrittenword.com>
 	
+	PR bootstrap/10974
 	* physmem.c: Update comment.
 	* configure.in: Modify test for _system_configuration for older
 	AIX systems.
