--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2003-06-08  Richard Henderson  <rth@redhat.com>
 
+	* stmt.c (expand_asm_operands): Re-word warning.
+
+2003-06-08  Richard Henderson  <rth@redhat.com>
+
         * expr.h (EXPAND_MEMORY): New.
         * expr.c (expand_expr): Check it.
         * stmt.c (expand_asm_operands): Provide it when the constraint
