--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-10  Andrew Haley  <aph@redhat.com>
+
+        * include/x86_64-signal.h (MAKE_THROW_FRAME): Mark sigcontext on
+        stack volatile to prevent optimization from removing it.
+
 2003-06-06  Mark Wielaard  <mark@klomp.org>
 
 	* java/security/Security.java (secprops): Initialize.
