--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-10  Andrew Haley  <aph@redhat.com>
+
+	* lang.c (LANG_HOOKS_DECL_OK_FOR_SIBCALL): New.
+	(java_decl_ok_for_sibcall): New.
+
 2003-05-13  Release Manager
 
 	* GCC 3.3 Released.
