--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-10  Jason Merrill  <jason@redhat.com>
+
+	PR c++/10968
+	* pt.c (mark_decl_instantiated): Set TREE_SYMBOL_REFERENCED.
+
 2003-06-09  Zack Weinberg  <zack@codesourcery.com>
 
 	PR 8861
