--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-11  Richard Henderson  <rth@redhat.com>
+
+        * stmt.c (expand_asm_operands): Don't warn for memories with
+        queued addresses.
+
 2003-06-11  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	PR target/8787
