--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-12  Jakub Jelinek  <jakub@redhat.com>
+
+	* c-opts.c (complain_wrong_lang): Add on argument.
+	Print no- switch if on is false.
+	(c_common_decode_option): Adjust caller.
+
 2003-06-11  Richard Henderson  <rth@redhat.com>
 
         * stmt.c (expand_asm_operands): Don't warn for memories with
