--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-12  Jakub Jelinek  <jakub@redhat.com>
+
+	* c-decl.c (c_expand_body): Save input_filename and lineno,
+	set it before tree inlining and restore before return.
+
 2003-06-12  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* config/s390/s390.c (s390_emit_prologue): Use LA instead of AR
