--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-10  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/noreturn-1.c: Move noreturn warning line.
+	* gcc.dg/return-type-1.c: Move control reaches end warning line.
+
 2003-06-10  Richard Henderson  <rth@redhat.com>
 
         * gcc.dg/asm-7.c: Adjust expected warning text.
