--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-12  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/10635
+	* g++.dg/expr/cast1.C: New test.
+
 2003-06-10  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/noreturn-1.c: Move noreturn warning line.
