--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2003-06-12  Richard Henderson  <rth@redhat.com>
+
+	PR inline-asm/4823
+	* reg-stack.c (any_malformed_asm): New.
+	(check_asm_stack_operands): Set it.
+	(convert_regs_1): Check it before aborting.
+
 2003-06-12  Jakub Jelinek  <jakub@redhat.com>
 
 	* c-decl.c (c_expand_body): Save input_filename and lineno,
