--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,11 @@
 2003-06-12  Richard Henderson  <rth@redhat.com>
 
+	PR target/7594
+        * config/m68k/m68k.md (zero_extendhisi2): Use gen_lowpart_SUBREG.
+        (zero_extendqihi2, zero_extendqisi2): Likewise.
+
+2003-06-12  Richard Henderson  <rth@redhat.com>
+
 	PR inline-asm/4823
 	* reg-stack.c (any_malformed_asm): New.
 	(check_asm_stack_operands): Set it.
