--- a/gcc/config/m68k/m68k.md
+++ b/gcc/config/m68k/m68k.md
@@ -1588,7 +1588,7 @@
   "
 {
   operands[1] = make_safe_from (operands[1], operands[0]);
-  operands[2] = gen_lowpart (HImode, operands[0]);
+  operands[2] = gen_lowpart_SUBREG (HImode, operands[0]);
 }")
 
 (define_expand "zero_extendqihi2"
@@ -1600,7 +1600,7 @@
   "
 {
   operands[1] = make_safe_from (operands[1], operands[0]);
-  operands[2] = gen_lowpart (QImode, operands[0]);
+  operands[2] = gen_lowpart_SUBREG (QImode, operands[0]);
 }")
 
 (define_expand "zero_extendqisi2"
@@ -1612,7 +1612,7 @@
   "
 {
   operands[1] = make_safe_from (operands[1], operands[0]);
-  operands[2] = gen_lowpart (QImode, operands[0]);
+  operands[2] = gen_lowpart_SUBREG (QImode, operands[0]);
 }")
 
 ;; Patterns to recognize zero-extend insns produced by the combiner.
