re PR rtl-optimization/10955 ([SPARC] wrong code at -O3 for structure argument in context of structure return)
	PR optimization/10955
	* unroll.c (unroll_loop): Fix off-by-one bug.

From-SVN: r67873

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-13  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	PR optimization/10955
+	* unroll.c (unroll_loop): Fix off-by-one bug.
+
 2003-06-12  Richard Henderson  <rth@redhat.com>
 
 	PR middle-end/10475
