--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-13  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.c-torture/execute/20030611-1.c: New test.
+
 2003-06-12  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/10635
