--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-12  Richard Henderson  <rth@redhat.com>
+
+        PR middle-end/10557
+        * rtlanal.c (subreg_offset_representable_p): Relax subreg check.
+
 2003-06-13  Eric Botcazou  <ebotcazou@libertysurf.fr>
             Christian Ehrhardt <ehrhardt@mathematik.uni-ulm.de>
 
