--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,12 @@
 2003-06-12  Richard Henderson  <rth@redhat.com>
 
+        PR target/11089
+        * config/i386/i386.md (sse_movaps): Use an expander to force
+        one operand to be a register.
+        (sse_movups): Likewise.
+
+2003-06-12  Richard Henderson  <rth@redhat.com>
+
         PR middle-end/10557
         * rtlanal.c (subreg_offset_representable_p): Relax subreg check.
 
