--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-13  Richard Henderson  <rth@redhat.com>
+
+        PR debug/9864
+        * com.c (ffecom_sym_transform_): Install FFEINFO_whereGLOBAL
+        symbols in the global binding level.
+
 2003-05-18  Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	PR fortran/10726
