--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-14  Richard Earnshaw  <rearnsha@arm.com>
+
+	PR target/11183
+	* arm.c (output_move_double): Pass SImode to adjust_address.
+
 2003-06-13  Janis Johnson  <janis187@us.ibm.com>
 
 	* doc/install.texi (m32r-*-elf): Change company to Renesas.
