--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-06-17  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* MAINTAINERS (Write After Approval): Remove Andrew Haley.
+
 2003-05-14  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* config-ml.in: Propagate INSTALL variables.
