--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-17  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
+
+	* include/powerpc-signal.h: New File.
+	* configure.in: Use it.
+	* configure: Regenerated.
+
 2003-06-10  Andrew Haley  <aph@redhat.com>
 
         * include/x86_64-signal.h (MAKE_THROW_FRAME): Mark sigcontext on
