--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-17  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* doc/contrib.texi: Replace Hitachi with Renesas.
+	* doc/install.texi: Likewise.
+	* doc/invoke.texi: Likewise.
+
 2003-06-17  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
 
 	* config/rs6000/linux.h (MD_FALLBACK_FRAME_STATE_FOR): Partly revert
