--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-17  Ranjit Mathew  <rmathew@hotmail.com>
+
+	* install.texi (Testing): Add information on how to run Java
+	runtime tests separately.
+
 2003-06-17  Christopher Faylor  <cgf@redhat.com>
 
 	* doc/install.texi: Add msvc rebuild caveat.
