--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,8 @@
 2003-06-17  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/1255
+	* g++.dg/lookup/using3.C: New test.
+
 	PR c++/11105
 	* g++.dg/abi/conv1.C: Remove it.
 	* g++.dg/template/conv7.C: New test.
