--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-17  Jason Merrill  <jason@redhat.com>
+
+	PR c++/10929
+	* tree-inline.c (expand_call_inline): Don't warn about failing to
+	inline a function which was made inline by -finline-functions.
+
 2003-06-17  Ranjit Mathew  <rmathew@hotmail.com>
 
 	* install.texi (Testing): Add information on how to run Java
