--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-18  Richard Henderson  <rth@redhat.com>
+
+	* config/ia64/unwind-ia64.c (_Unwind_GetCFA): New.
+	(_Unwind_FindEnclosingFunction): Implement.
+
 2003-06-18  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
 
 	* config/rs6000/rs6000.c (init_cumulative_args): Add and handle LIBCALL
