re PR preprocessor/11022 (no warning for non-compatible macro redefine)
	PR preprocessor/11022
	* cppmacro.c (warn_of_redefinition): Handle cases where the two
	definitions have different numbers of tokens.
testsuite:
	* gcc.dg/cpp/redef3.c: New file.

From-SVN: r68178

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-19  DJ Delorie  <dj@redhat.com>
+
+	PR preprocessor/11022
+	* cppmacro.c (warn_of_redefinition): Handle cases where the two
+	definitions have different numbers of tokens.
+
 2003-06-18  Richard Henderson  <rth@redhat.com>
 
 	* config/ia64/unwind-ia64.c (_Unwind_GetCFA): New.
